--- a/putiosync/webif/templates/history.html
+++ b/putiosync/webif/templates/history.html
@@ -1,47 +1,39 @@
 {% extends "base.html" %}
-{% block javascript %}
-<script type="text/javascript">
-    function getUpdatedHistory() {
-        console.log("getUpdatedHistory()")
-        $.ajax({
-            url: '/api/download_history',
-            data: {
-                "results_per_page": 100,
-                "q": JSON.stringify({
-                    "order_by": [
-                        {
-                            "field": "id",
-                            "direction": "desc"
-                        }
-                    ]
-                })
-            },
-            dataType: "json",
-            contentType: "application/json",
-            success: function (data) {
-                $("#history_tbl tbody").html()
-                $.each(data.objects, function (index, obj) {
-                    $("#history_tbl tbody").append(
-                            "<tr>" + "<td>" + obj.id + "</td>" + "<td></td>" + "<td>" + obj.name + "</td>" + "</tr>"
-                    );
-                });
-                console.log(data);
-            }
-        });
-    }
-    $(document).ready(function () {
-        getUpdatedHistory();
-    });
-</script>
-{%endblock%}
+
+{% macro render_pagination(pagination, endpoint) %}
+  <ul class="pagination">
+  {%- for page in pagination.iter_pages() %}
+    {% if page %}
+      {% if page != pagination.page %}
+        <li><a href="{{ url_for(endpoint, page=page) }}">{{ page }}</a></li>
+      {% else %}
+       <li class="active"><a href="{{ url_for(endpoint, page=page) }}">{{ page }}</a></li>
+      {% endif %}
+    {% else %}
+      <li class="inactive"><a href="#">...</a></li>
+    {% endif %}
+  {%- endfor %}
+  </div>
+{% endmacro %}
+
 {% block body %}
-<h2>Download History (Last 100)</h2>
+<h2>Download History</h2>
+<p><em>You've downloaded a total of {{ total_downloaded|prettysize }}.</em></p>
 <table id="history_tbl" class="table table-striped table-bordered">
     <thead>
     <th>id</th>
-    <th>Date/Time</th>
+    <th>Size</th>
     <th>name</th>
     </thead>
-    <tbody></tbody>
+    <tbody>
+    {% for download in history.items %}
+        <tr>
+            <td>{{ download.id }}</td>
+            <td>{{ download.size|prettysize }}</td>
+            <td>{{ download.name }}</td>
+        </tr>
+    {% endfor %}
+    </tbody>
 </table>
+{{ render_pagination(history, "_view_history") }}
 {% endblock %}
