--- a/putiosync/webif/templates/base.html
+++ b/putiosync/webif/templates/base.html
@@ -54,6 +54,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="/static/js/jquery.flot.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/handlebars-v1.3.0.js"></script>
     {% block javascript %}{% endblock %}
