webif: fix bug where empty directories were not removed
Also add link to "put.io" in the navbar.

--- a/putiosync/webif/templates/base.html
+++ b/putiosync/webif/templates/base.html
@@ -27,12 +27,13 @@
     <div class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="../" class="navbar-brand">putio-sync</a>
+          <a href="/" class="navbar-brand">putio-sync</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
             <li><a href="/active">Queue/Active</a></li>
             <li><a href="/history">History</a></li>
+            <li><a href="http://put.io/">Put.io</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
